c7.4-kubeadm-calico-1-node-v1.10+/CD-kubernetes-dashboard/Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: add-on
  annotations:
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.org/ssl-services: "kubernetes-dashboard-release"
spec:
  rules:
  - host: kubernetes-dashboard.add-on.k8s.local
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard-release
          servicePort: 443
